# adventOfCode

./: .gitignore  Day1.cpp
2024/: Day1Pt2.cpp  Day2Pt1.cpp  Day2Pt2.cpp  Day3Both.cpp  Day4Pt1.cpp  Day5Pt1.cpp  Day5Pt2.cpp  Day6Pt1.cpp
2025/: CMakeLists.txt  Day1.cpp  Day2.cpp  DayTemplate.cpp  main.cpp
